# jacRender

./: .gitignore  CMakeLists.txt  README.md
inc/: Camera.hpp  Material.hpp  MemoryManager.hpp  Mesh.hpp  Model.hpp  PushConstants.hpp  Renderer.hpp  ResourceManager.hpp  ShaderDefinitions.hpp  Texture.hpp  UBO.hpp  Vertex.hpp  Window.hpp
inc/common/: constants.hpp  defs.hpp  utils.hpp  vma_wrapper.hpp
inc/core/commands/: Command.hpp  CommandBuffer.hpp  CommandPool.hpp
inc/core/descriptors/: DescriptorPool.hpp
inc/core/device/: Device.hpp  Instance.hpp  Queue.hpp  Surface.hpp
inc/core/memory/: Buffer.hpp  Image.hpp  vma.hpp
inc/core/pipeline/: Framebuffer.hpp  Pipeline.hpp  Shader.hpp  Swapchain.hpp
inc/core/sync/: Sync.hpp
inc/graphics/: Camera.hpp  Material.hpp  Mesh.hpp  Model.hpp  Renderer.hpp  Texture.hpp  Window.hpp
inc/renderer/: Renderer.hpp
inc/shader/: Vertex.hpp  defs_global.hpp  defs_instance.hpp  defs_material.hpp
inc/shaders/generic/: Descriptors.hpp  Vertex.hpp
inc/systems/: LightingSystem.hpp  MemoryManager.hpp  ResourceManager.hpp
inc/vulkan/: Buffer.hpp  CommandBuffer.hpp  DescriptorSet.hpp  Device.hpp  Framebuffer.hpp  Instance.hpp  Pipeline.hpp  Shader.hpp  Surface.hpp  Swapchain.hpp  Sync.hpp  Texture.hpp  Window.hpp  api.hpp  utils.hpp  wrapper.hpp
inc/wrapper/: Buffer.hpp  Command.hpp  CommandBuffer.hpp  CommandPool.hpp  DescriptorPool.hpp  Image.hpp  Queue.hpp  Sync.hpp  vma.hpp
shaders/: CMakeLists.txt  generic.frag  generic.vert  triangle.frag  triangle.vert
src/: Camera.cpp  MemoryManager.cpp  Renderer.cpp  Window.cpp  main.cpp  vma_implementation.cpp
src/common/: utils.cpp
src/core/commands/: CommandBuffer.cpp  CommandPool.cpp
src/core/device/: Device.cpp  Instance.cpp  Surface.cpp
src/core/memory/: vma.cpp
src/core/pipeline/: Framebuffer.cpp  Pipeline.cpp  Shader.cpp  Swapchain.cpp
src/graphics/: Camera.cpp  Renderer.cpp  Window.cpp
src/shader/: defs_global.cpp  defs_instance.cpp  defs_material.cpp
src/shaders/generic/: Descriptors.cpp
src/systems/: MemoryManager.cpp
src/vulkan/: Buffer.cpp  Commandbuffer.cpp  DescriptorSet.cpp  Device.cpp  Framebuffer.cpp  Instance.cpp  Pipeline.cpp  Shader.cpp  Surface.cpp  Swapchain.cpp  Window.cpp  api.cpp  utils.cpp  wrapper.cpp
src/wrapper/: CommandBuffer.cpp  CommandPool.cpp  stb_image.cpp  vma.cpp
